@@ -35,8 +35,7 @@ using namespace tvheadend::utilities;
 HTSPDemuxer::HTSPDemuxer(IHTSPDemuxPacketHandler& demuxPktHdl, HTSPConnection& conn)
   : m_conn(conn),
     m_pktBuffer(static_cast<size_t>(-1)),
-    m_seekTime(INVALID_SEEKTIME),
-    m_seeking(false),
+    m_seektime(nullptr),
     m_subscription(conn),
     m_lastUse(0),
     m_startTime(0),
@@ -85,7 +84,7 @@ void HTSPDemuxer::Abort0()
   m_streams.clear();
   m_streamStat.clear();
   m_rdsIdx = 0;
-  m_seeking = false;
+  m_seektime = nullptr;
 }
 
 
@@ -166,36 +165,68 @@ void HTSPDemuxer::Abort()
   ResetStatus();
 }
 
+namespace tvheadend
+{
+
+class SubscriptionSeekTime
+{
+public:
+  SubscriptionSeekTime() = default;
+
+  ~SubscriptionSeekTime()
+  {
+    Set(INVALID_SEEKTIME); // ensure signal is sent
+  }
+
+  int64_t Get(CMutex& mutex, uint32_t timeout)
+  {
+    m_cond.Wait(mutex, m_flag, timeout);
+    m_flag = false;
+    return m_seektime;
+  }
+
+  void Set(int64_t seektime)
+  {
+    m_seektime = seektime;
+    m_flag = true;
+    m_cond.Broadcast();
+  }
+
+private:
+  CCondition<volatile bool> m_cond;
+  bool m_flag = false;
+  int64_t m_seektime = INVALID_SEEKTIME;
+};
+
+} // namespace tvheadend
+
 bool HTSPDemuxer::Seek(double time, bool, double& startpts)
 {
+  CLockObject lock(m_conn.Mutex());
+
   if (!m_subscription.IsActive())
     return false;
 
-  m_seekTime = 0;
-  m_seeking = true;
+  SubscriptionSeekTime seekTime;
+  m_seektime = &seekTime;
+
   if (!m_subscription.SendSeek(time))
-  {
-    m_seeking = false;
     return false;
-  }
 
   /* Wait for time */
-  CLockObject lock(m_conn.Mutex());
+  int64_t seekedTo =
+      (*m_seektime).Get(m_conn.Mutex(), Settings::GetInstance().GetResponseTimeout());
+  m_seektime = nullptr;
 
-  if (!m_seekCond.Wait(m_conn.Mutex(), m_seekTime, Settings::GetInstance().GetResponseTimeout()))
+  if (seekedTo == INVALID_SEEKTIME)
   {
     Logger::Log(LogLevel::LEVEL_ERROR, "failed to get subscriptionSeek response");
-    m_seeking = false;
     Flush(); /* try to resync */
     return false;
   }
 
-  m_seeking = false;
-  if (m_seekTime == INVALID_SEEKTIME)
-    return false;
-
   /* Store */
-  startpts = TVH_TO_DVD_TIME(m_seekTime - 1);
+  startpts = TVH_TO_DVD_TIME(seekedTo);
   Logger::Log(LogLevel::LEVEL_TRACE, "demux seek startpts = %lf", startpts);
 
   return true;
@@ -526,7 +557,7 @@ void HTSPDemuxer::ParseMuxPacket(htsmsg_t* m)
   if (!type)
     type = '_';
 
-  bool ignore = m_seeking;
+  bool ignore = m_seektime != nullptr;
 
   Logger::Log(LogLevel::LEVEL_TRACE, "demux pkt idx %d:%d type %c pts %lf len %lld%s", idx,
               pkt->iStreamId, type, pkt->pts, static_cast<long long>(binlen),
@@ -792,25 +823,25 @@ void HTSPDemuxer::ParseSourceInfo(htsmsg_t* m)
 
 void HTSPDemuxer::ParseSubscriptionStop(htsmsg_t*)
 {
-  //CLockObject lock(m_mutex);
 }
 
 void HTSPDemuxer::ParseSubscriptionSkip(htsmsg_t* m)
 {
   CLockObject lock(m_conn.Mutex());
 
+  if (m_seektime == nullptr)
+    return;
+
   int64_t s64 = 0;
   if (htsmsg_get_s64(m, "time", &s64))
   {
-    m_seekTime = INVALID_SEEKTIME;
+    (*m_seektime).Set(INVALID_SEEKTIME);
   }
   else
   {
-    m_seekTime = s64 < 0 ? 1 : s64 + 1; /* it must not be zero! */
+    (*m_seektime).Set(s64 < 0 ? 0 : s64);
     Flush(); /* flush old packets (with wrong pts) */
   }
-  m_seeking = false;
-  m_seekCond.Broadcast();
 }
 
 void HTSPDemuxer::ParseSubscriptionSpeed(htsmsg_t* m)
