@@ -35,6 +35,7 @@ namespace tvheadend
 {
 
 class HTSPConnection;
+class SubscriptionSeekTime;
 
 /*
  * HTSP Demuxer - live streams
@@ -110,9 +111,7 @@ private:
   P8PLATFORM::SyncedBuffer<DemuxPacket*> m_pktBuffer;
   std::vector<kodi::addon::PVRStreamProperties> m_streams;
   std::map<int, int> m_streamStat;
-  int64_t m_seekTime;
-  P8PLATFORM::CCondition<volatile int64_t> m_seekCond;
-  bool m_seeking;
+  std::atomic<SubscriptionSeekTime*> m_seektime;
   tvheadend::status::SourceInfo m_sourceInfo;
   tvheadend::status::Quality m_signalInfo;
   tvheadend::status::TimeshiftStatus m_timeshiftStatus;
