@@ -1,5 +1,6 @@
 7.1.4
 - Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)
+- Refactor subscription seek code
 
 7.1.3
 - Withdraw v7.1.2 due to new deadlocks it introduces, for example during initial connect to backend.
